<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/login_bg"
    tools:context=".DangKy">

    <LinearLayout
        android:layout_width="430dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DangKy"
            android:gravity="center"
            android:textSize="14pt"
            android:textColor="@color/gold"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/TenDangNhap"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="20sp"></EditText>

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/MatKhau"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="20sp"></EditText>

        <EditText
            android:id="@+id/signup_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/MatKhau2"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="20sp"></EditText>

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/DangNhap"
            android:textColor="@color/gold"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:padding="18dp"
            android:text="@string/XacNhan"
            android:textColor="@color/gold"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>